--- a/app/src/main/res/layout/content_activity_recognition.xml
+++ b/app/src/main/res/layout/content_activity_recognition.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="johnkagga.me.location.ActivityRecognition"
+    tools:context=".RecognitionActivity"
     tools:showIn="@layout/activity_activity_recognition">
 
     <Button
